--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,19 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -92,9 +100,10 @@
     "    data[\"garage\"] = data[\"garage\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data['date_closed'] = data['date_closed'].apply(lambda x: 0 if x == None else (x - dt.date(2000, 1, 1)).days)\n",
     "    data['date_closed'] = data['date_closed'].astype(int)\n",
+    "    data[\"school_district_id\"] = data[\"school_district_id\"].astype(str)\n",
     "    \n",
     "    # convert the area name into dummy variables\n",
-    "    dm = pd.get_dummies(data[['area_name', 'zipcode']], prefix=['area_name','zipcode'])\n",
+    "    dm = pd.get_dummies(data[['area_name', 'zipcode','school_district_id']], prefix=['area_name','zipcode','school_district_id'])\n",
     "    data = pd.concat([data, dm], axis=1)\n",
     "    del dm\n",
     "    \n",
@@ -108,11 +117,15 @@
     "    query = %sql (\\\n",
     "    SELECT  \\\n",
     "    *, \\\n",
-    "    property_transaction_logs.id as 'transaction_id' \\\n",
+    "    properties.id as 'property_id', \\\n",
+    "    property_transaction_logs.id as 'transaction_id', \\\n",
+    "    property_school_districts.school_district_id \\\n",
     "    FROM  \\\n",
-    "    properties, \\\n",
     "    property_transaction_logs, \\\n",
-    "    area_name_zipcodes \\\n",
+    "    area_name_zipcodes, \\\n",
+    "    properties \\\n",
+    "    LEFT JOIN \\\n",
+    "    property_school_districts ON property_school_districts.property_id = properties.id \\\n",
     "    where  \\\n",
     "    ( abnormal = false OR abnormal IS NULL OR abnormal = 0 ) and \\\n",
     "    properties.sqft between 1 and 10000 and \\\n",
@@ -158,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -167,8 +180,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1221 rows affected.\n",
-      "1221 rows affected.\n"
+      "1224 rows affected.\n",
+      "1224 rows affected.\n"
      ]
     }
    ],
@@ -185,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -195,11 +208,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "225292 rows affected.\n",
-      "12214 rows affected.\n",
-      "49690 rows affected.\n",
-      "Entries before filter:  287196\n",
-      "Entries after filter:  213955\n"
+      "229150 rows affected.\n",
+      "11468 rows affected.\n",
+      "61367 rows affected.\n",
+      "Entries before filter:  301985\n",
+      "Entries after filter:  218113\n"
      ]
     },
     {
@@ -230,6 +243,11 @@
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:42: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
@@ -244,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -268,16 +286,16 @@
        "      <th>date_transacted_latest</th>\n",
        "      <th>days_on_market</th>\n",
        "      <th>...</th>\n",
-       "      <th>zipcode_85379</th>\n",
-       "      <th>zipcode_85381</th>\n",
-       "      <th>zipcode_85382</th>\n",
-       "      <th>zipcode_85383</th>\n",
-       "      <th>zipcode_85387</th>\n",
-       "      <th>zipcode_85388</th>\n",
-       "      <th>zipcode_85390</th>\n",
-       "      <th>zipcode_85392</th>\n",
-       "      <th>zipcode_85395</th>\n",
-       "      <th>zipcode_85396</th>\n",
+       "      <th>school_district_id_68.0</th>\n",
+       "      <th>school_district_id_75.0</th>\n",
+       "      <th>school_district_id_76.0</th>\n",
+       "      <th>school_district_id_8.0</th>\n",
+       "      <th>school_district_id_87.0</th>\n",
+       "      <th>school_district_id_90.0</th>\n",
+       "      <th>school_district_id_93.0</th>\n",
+       "      <th>school_district_id_95.0</th>\n",
+       "      <th>school_district_id_96.0</th>\n",
+       "      <th>school_district_id_nan</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>property_id</th>\n",
@@ -306,17 +324,17 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>132390</th>\n",
-       "      <td>15491 W Moonlight Way, Surprise, AZ 85374</td>\n",
+       "      <th>8962921.0</th>\n",
+       "      <td>15036 W Ventura St, Surprise, AZ 85379</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5984</td>\n",
-       "      <td>2016-04-14</td>\n",
-       "      <td>2016-05-20</td>\n",
-       "      <td>36</td>\n",
+       "      <td>4546</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2012-06-12</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -330,65 +348,17 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133038</th>\n",
-       "      <td>15770 W Silver Breeze Dr, Surprise, AZ 85374</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6086</td>\n",
-       "      <td>2016-06-23</td>\n",
-       "      <td>2016-08-30</td>\n",
-       "      <td>68</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>135238</th>\n",
-       "      <td>17200 W Bell Rd LOT 602, Surprise, AZ 85374</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6236</td>\n",
-       "      <td>2016-12-09</td>\n",
-       "      <td>2017-01-27</td>\n",
-       "      <td>49</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131643</th>\n",
-       "      <td>15249 W Honeysuckle Ln, Surprise, AZ 85374</td>\n",
+       "      <th>8962921.0</th>\n",
+       "      <td>15149 W Alexandria Way, Surprise, AZ 85379</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6032</td>\n",
-       "      <td>2016-06-08</td>\n",
-       "      <td>2016-07-07</td>\n",
-       "      <td>29</td>\n",
+       "      <td>4554</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2012-06-20</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -402,17 +372,65 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133362</th>\n",
-       "      <td>15914 W Monte Cristo Ave, Surprise, AZ 85374</td>\n",
+       "      <th>8962921.0</th>\n",
+       "      <td>14757 W Laurel Ln, Surprise, AZ 85379</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3833</td>\n",
+       "      <td>2010-04-18</td>\n",
+       "      <td>2010-06-30</td>\n",
+       "      <td>73</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8962920.0</th>\n",
+       "      <td>14263 W Dahlia Dr, Surprise, AZ 85379</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4447</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2012-03-05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8962920.0</th>\n",
+       "      <td>13386 W Mauna Loa Ln, Surprise, AZ 85379</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6075</td>\n",
-       "      <td>2016-07-01</td>\n",
-       "      <td>2016-08-19</td>\n",
-       "      <td>49</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2005-06-22</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -427,62 +445,78 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 156 columns</p>\n",
+       "<p>5 rows × 220 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   address adult area_name  \\\n",
-       "property_id                                                                  \n",
-       "132390          15491 W Moonlight Way, Surprise, AZ 85374    NaN        PH   \n",
-       "133038       15770 W Silver Breeze Dr, Surprise, AZ 85374    NaN        PH   \n",
-       "135238        17200 W Bell Rd LOT 602, Surprise, AZ 85374    NaN        PH   \n",
-       "131643         15249 W Honeysuckle Ln, Surprise, AZ 85374    NaN        PH   \n",
-       "133362       15914 W Monte Cristo Ave, Surprise, AZ 85374    NaN        PH   \n",
+       "                                                 address adult area_name  \\\n",
+       "property_id                                                                \n",
+       "8962921.0        15036 W Ventura St, Surprise, AZ 85379    NaN        PH   \n",
+       "8962921.0    15149 W Alexandria Way, Surprise, AZ 85379    NaN        PH   \n",
+       "8962921.0         14757 W Laurel Ln, Surprise, AZ 85379    NaN        PH   \n",
+       "8962920.0         14263 W Dahlia Dr, Surprise, AZ 85379    NaN        PH   \n",
+       "8962920.0      13386 W Mauna Loa Ln, Surprise, AZ 85379    NaN        PH   \n",
        "\n",
        "            bathrooms bedrooms construction  date_closed date_listed  \\\n",
        "property_id                                                            \n",
-       "132390              1        3          NaN         5984  2016-04-14   \n",
-       "133038              2        2          NaN         6086  2016-06-23   \n",
-       "135238              2        2          NaN         6236  2016-12-09   \n",
-       "131643              2        3          NaN         6032  2016-06-08   \n",
-       "133362              2        3          NaN         6075  2016-07-01   \n",
+       "8962921.0           1        2          NaN         4546        None   \n",
+       "8962921.0           2        3          NaN         4554        None   \n",
+       "8962921.0           2        4          NaN         3833  2010-04-18   \n",
+       "8962920.0           2        4          NaN         4447        None   \n",
+       "8962920.0           2        3          NaN         1999        None   \n",
        "\n",
-       "            date_transacted_latest days_on_market      ...      zipcode_85379  \\\n",
-       "property_id                                            ...                      \n",
-       "132390                  2016-05-20             36      ...                  0   \n",
-       "133038                  2016-08-30             68      ...                  0   \n",
-       "135238                  2017-01-27             49      ...                  0   \n",
-       "131643                  2016-07-07             29      ...                  0   \n",
-       "133362                  2016-08-19             49      ...                  0   \n",
+       "            date_transacted_latest days_on_market          ...            \\\n",
+       "property_id                                                ...             \n",
+       "8962921.0               2012-06-12            NaN          ...             \n",
+       "8962921.0               2012-06-20            NaN          ...             \n",
+       "8962921.0               2010-06-30             73          ...             \n",
+       "8962920.0               2012-03-05            NaN          ...             \n",
+       "8962920.0               2005-06-22            NaN          ...             \n",
        "\n",
-       "            zipcode_85381 zipcode_85382 zipcode_85383 zipcode_85387  \\\n",
-       "property_id                                                           \n",
-       "132390                  0             0             0             0   \n",
-       "133038                  0             0             0             0   \n",
-       "135238                  0             0             0             0   \n",
-       "131643                  0             0             0             0   \n",
-       "133362                  0             0             0             0   \n",
+       "            school_district_id_68.0 school_district_id_75.0  \\\n",
+       "property_id                                                   \n",
+       "8962921.0                         0                       0   \n",
+       "8962921.0                         0                       0   \n",
+       "8962921.0                         0                       0   \n",
+       "8962920.0                         0                       0   \n",
+       "8962920.0                         0                       0   \n",
        "\n",
-       "            zipcode_85388 zipcode_85390 zipcode_85392 zipcode_85395  \\\n",
-       "property_id                                                           \n",
-       "132390                  0             0             0             0   \n",
-       "133038                  0             0             0             0   \n",
-       "135238                  0             0             0             0   \n",
-       "131643                  0             0             0             0   \n",
-       "133362                  0             0             0             0   \n",
+       "            school_district_id_76.0 school_district_id_8.0  \\\n",
+       "property_id                                                  \n",
+       "8962921.0                         0                      0   \n",
+       "8962921.0                         0                      0   \n",
+       "8962921.0                         0                      0   \n",
+       "8962920.0                         0                      0   \n",
+       "8962920.0                         0                      0   \n",
        "\n",
-       "            zipcode_85396  \n",
-       "property_id                \n",
-       "132390                  0  \n",
-       "133038                  0  \n",
-       "135238                  0  \n",
-       "131643                  0  \n",
-       "133362                  0  \n",
+       "            school_district_id_87.0 school_district_id_90.0  \\\n",
+       "property_id                                                   \n",
+       "8962921.0                         0                       0   \n",
+       "8962921.0                         0                       0   \n",
+       "8962921.0                         0                       0   \n",
+       "8962920.0                         0                       0   \n",
+       "8962920.0                         0                       0   \n",
        "\n",
-       "[5 rows x 156 columns]"
+       "            school_district_id_93.0 school_district_id_95.0  \\\n",
+       "property_id                                                   \n",
+       "8962921.0                         0                       0   \n",
+       "8962921.0                         0                       0   \n",
+       "8962921.0                         0                       0   \n",
+       "8962920.0                         0                       0   \n",
+       "8962920.0                         0                       0   \n",
+       "\n",
+       "            school_district_id_96.0 school_district_id_nan  \n",
+       "property_id                                                 \n",
+       "8962921.0                         0                      0  \n",
+       "8962921.0                         0                      0  \n",
+       "8962921.0                         0                      0  \n",
+       "8962920.0                         0                      0  \n",
+       "8962920.0                         0                      0  \n",
+       "\n",
+       "[5 rows x 220 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,22 +527,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10948"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(q['for_sale'].index)"
    ]
