--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -167,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1222 rows affected.\n",
-      "1222 rows affected.\n"
+      "1225 rows affected.\n",
+      "1225 rows affected.\n"
      ]
     }
    ],
@@ -195,11 +195,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "225715 rows affected.\n",
-      "11482 rows affected.\n",
-      "60403 rows affected.\n",
-      "Entries before filter:  297600\n",
-      "Entries after filter:  214695\n"
+      "226104 rows affected.\n",
+      "11419 rows affected.\n",
+      "61140 rows affected.\n",
+      "Entries before filter:  298663\n",
+      "Entries after filter:  215038\n"
      ]
     },
     {
@@ -306,16 +306,88 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>298654</th>\n",
-       "      <td>3105 E Mulberry Dr, Phoenix, AZ 85016</td>\n",
+       "      <th>7385791</th>\n",
+       "      <td>4747 N 150th Ave, Goodyear, AZ 85395</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5189</td>\n",
-       "      <td>2014-02-08</td>\n",
-       "      <td>2014-03-17</td>\n",
+       "      <td>6299</td>\n",
+       "      <td>2017-01-11</td>\n",
+       "      <td>2017-03-31</td>\n",
+       "      <td>79</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7385789</th>\n",
+       "      <td>4448 N 151st Dr, Goodyear, AZ 85395</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6333</td>\n",
+       "      <td>2017-05-03</td>\n",
+       "      <td>2017-05-04</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7420324</th>\n",
+       "      <td>4347 N 161st Ln, Goodyear, AZ 85395</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6296</td>\n",
+       "      <td>2017-03-02</td>\n",
+       "      <td>2017-03-28</td>\n",
+       "      <td>26</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7416322</th>\n",
+       "      <td>4312 N 159th Dr, Goodyear, AZ 85395</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6327</td>\n",
+       "      <td>2017-03-22</td>\n",
+       "      <td>2017-04-28</td>\n",
        "      <td>37</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
@@ -326,21 +398,21 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1876208</th>\n",
-       "      <td>934 E Vermont Ave, Phoenix, AZ 85014</td>\n",
+       "      <th>7437315</th>\n",
+       "      <td>4243 N 150th Dr, Goodyear, AZ 85395</td>\n",
        "      <td>NaN</td>\n",
        "      <td>PH</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2484</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2006-10-20</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>6355</td>\n",
+       "      <td>2017-04-02</td>\n",
+       "      <td>2017-05-26</td>\n",
+       "      <td>54</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -350,79 +422,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8957612</th>\n",
-       "      <td>36648 W Jones Ave, Tonopah, AZ 85354</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6175</td>\n",
-       "      <td>2016-10-22</td>\n",
-       "      <td>2016-11-27</td>\n",
-       "      <td>36</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8957609</th>\n",
-       "      <td>16239 W Sherman St, Goodyear, AZ 85338</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4456</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2012-03-14</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8957610</th>\n",
-       "      <td>17767 W Corpus Christi Ct, Goodyear, AZ 85338</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PH</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5613</td>\n",
-       "      <td>2015-04-02</td>\n",
-       "      <td>2015-05-15</td>\n",
-       "      <td>43</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -431,53 +431,53 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                    address adult area_name  \\\n",
-       "property_id                                                                   \n",
-       "298654               3105 E Mulberry Dr, Phoenix, AZ 85016    NaN        PH   \n",
-       "1876208               934 E Vermont Ave, Phoenix, AZ 85014    NaN        PH   \n",
-       "8957612               36648 W Jones Ave, Tonopah, AZ 85354    NaN        PH   \n",
-       "8957609             16239 W Sherman St, Goodyear, AZ 85338    NaN        PH   \n",
-       "8957610      17767 W Corpus Christi Ct, Goodyear, AZ 85338    NaN        PH   \n",
+       "                                           address adult area_name bathrooms  \\\n",
+       "property_id                                                                    \n",
+       "7385791      4747 N 150th Ave, Goodyear, AZ 85395    NaN        PH         2   \n",
+       "7385789       4448 N 151st Dr, Goodyear, AZ 85395    NaN        PH         2   \n",
+       "7420324       4347 N 161st Ln, Goodyear, AZ 85395    NaN        PH         2   \n",
+       "7416322       4312 N 159th Dr, Goodyear, AZ 85395    NaN        PH         2   \n",
+       "7437315       4243 N 150th Dr, Goodyear, AZ 85395    NaN        PH         2   \n",
        "\n",
-       "            bathrooms bedrooms construction  date_closed date_listed  \\\n",
-       "property_id                                                            \n",
-       "298654              2        2          NaN         5189  2014-02-08   \n",
-       "1876208             2        3          NaN         2484        None   \n",
-       "8957612             2        3          NaN         6175  2016-10-22   \n",
-       "8957609             2        3          NaN         4456        None   \n",
-       "8957610             2        3          NaN         5613  2015-04-02   \n",
+       "            bedrooms construction  date_closed date_listed  \\\n",
+       "property_id                                                  \n",
+       "7385791            5          NaN         6299  2017-01-11   \n",
+       "7385789            4          NaN         6333  2017-05-03   \n",
+       "7420324            3          NaN         6296  2017-03-02   \n",
+       "7416322            3          NaN         6327  2017-03-22   \n",
+       "7437315            3          NaN         6355  2017-04-02   \n",
        "\n",
        "            date_transacted_latest days_on_market      ...      zipcode_85379  \\\n",
        "property_id                                            ...                      \n",
-       "298654                  2014-03-17             37      ...                  0   \n",
-       "1876208                 2006-10-20            NaN      ...                  0   \n",
-       "8957612                 2016-11-27             36      ...                  0   \n",
-       "8957609                 2012-03-14            NaN      ...                  0   \n",
-       "8957610                 2015-05-15             43      ...                  0   \n",
+       "7385791                 2017-03-31             79      ...                  0   \n",
+       "7385789                 2017-05-04              1      ...                  0   \n",
+       "7420324                 2017-03-28             26      ...                  0   \n",
+       "7416322                 2017-04-28             37      ...                  0   \n",
+       "7437315                 2017-05-26             54      ...                  0   \n",
        "\n",
        "            zipcode_85381 zipcode_85382 zipcode_85383 zipcode_85387  \\\n",
        "property_id                                                           \n",
-       "298654                  0             0             0             0   \n",
-       "1876208                 0             0             0             0   \n",
-       "8957612                 0             0             0             0   \n",
-       "8957609                 0             0             0             0   \n",
-       "8957610                 0             0             0             0   \n",
+       "7385791                 0             0             0             0   \n",
+       "7385789                 0             0             0             0   \n",
+       "7420324                 0             0             0             0   \n",
+       "7416322                 0             0             0             0   \n",
+       "7437315                 0             0             0             0   \n",
        "\n",
        "            zipcode_85388 zipcode_85390 zipcode_85392 zipcode_85395  \\\n",
        "property_id                                                           \n",
-       "298654                  0             0             0             0   \n",
-       "1876208                 0             0             0             0   \n",
-       "8957612                 0             0             0             0   \n",
-       "8957609                 0             0             0             0   \n",
-       "8957610                 0             0             0             0   \n",
+       "7385791                 0             0             0             1   \n",
+       "7385789                 0             0             0             1   \n",
+       "7420324                 0             0             0             1   \n",
+       "7416322                 0             0             0             1   \n",
+       "7437315                 0             0             0             1   \n",
        "\n",
        "            zipcode_85396  \n",
        "property_id                \n",
-       "298654                  0  \n",
-       "1876208                 0  \n",
-       "8957612                 0  \n",
-       "8957609                 0  \n",
-       "8957610                 0  \n",
+       "7385791                 0  \n",
+       "7385789                 0  \n",
+       "7420324                 0  \n",
+       "7416322                 0  \n",
+       "7437315                 0  \n",
        "\n",
        "[5 rows x 156 columns]"
       ]
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "11149"
+       "11091"
       ]
      },
      "execution_count": 6,
